examples/connect/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
  namespace: confluent
  labels:
    app: connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
      - name: connect
        image: confluentinc/cp-server-connect:7.5.0
        ports:
        - containerPort: 8083
